# OpenGL-Game-Engine

./: CMakeLists.txt  README.md
res/: heights.raw  heights2.raw
res/glsl/: animation.glsl  gaussian_blur.glsl  light_scatter.glsl  simpel_mesh.glsl  skybox.glsl  testTerrain.glsl  water.glsl
res/glsl/2d/: gui.glsl  mesh.glsl
res/glsl/mesh/: advanced_mesh.glsl
res/glsl/terrain/: terrain_normal_map.glsl
res/glsl/water/: water_waves.glsl  water_waves2.glsl
res/models/: box.tna  cube.tna  lantern.tna  monkey.tna  plane.tna  running_man.tna
src/: main.cpp
src/client/old/: TCPClient.cpp  TCPClient.h  UDPClient.h
src/core/: camera.h  core.cpp  core.h  transform.cpp
src/core/component/: components.cpp  components.h  movement.cpp
src/core/io/: input.cpp  window.h
src/core/math/: math_lib.cpp  math_lib.h
src/core_engine/: camera.cpp  camera.h  camera.hpp  core_engine.cpp  core_engine.h  core_engine.hpp  entity.cpp  entity.h  entity.hpp  entity_component.cpp  entity_component.h  entity_component.hpp  transform.cpp  transform.h  transform.hpp
src/core_engine/component/: components.cpp  components.h  components.hpp  light_scatter.cpp  light_scatter.hpp  mouse_picker.cpp  mouse_picker.h  mouse_picker.hpp  movement.cpp  movement.h  movement.hpp  terrain.cpp  terrain.h
src/core_engine/frustum/: frustum.cpp  frustum.h  frustum.hpp  frustum_plane.cpp  frustum_plane.h  frustum_plane.hpp
src/core_engine/io/: input.cpp  input.h  input.hpp  sound.cpp  sound.h  sound.hpp  window.cpp  window.h  window.hpp
src/core_engine/math/: math.h  math.hpp  matrix.h  matrix.hpp  quaternion.h  quaternion.hpp  vector.cpp  vector.h  vector.hpp
src/core_engine/util/: util.h
src/network/shared/: TCPConnection.cpp  UDPConnection.cpp  (+1 more)
src/physics_engine/: aabb.cpp  aabb.h  intersect_data.cpp  intersect_data.h  intersect_data.hpp  physics_engine.cpp  physics_engine.h  physics_engine.hpp  physics_obj.cpp  physics_obj.h  physics_obj.hpp  plane.cpp  plane.h  sphere.cpp  sphere.h
src/rendering_engine/: fbo.cpp  fbo.hpp  light.h  rendering_engine.cpp  rendering_engine.h  rendering_engine.hpp  simple_objects.cpp  simple_objects.h  stb_image.c  texture.cpp  texture.h
src/shader/: shader.cpp  shader.h
src/shared/: TCPConnection.h
src/todo/: fbo.cpp  fbo.hpp  lighting.h  phong.cpp  phong.h  simple_objects.cpp  simple_objects.hpp
src/utils/: logger.cpp  logger.h  logger.hpp  shared.cpp  shared.hpp
(+119 files in other folders)
